syntax = "proto3";

package com.techbellys.product;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message CreateProductRequest {
  string name = 1;
  float price = 2;
  string categoryId = 3;
}

message GetProductRequest {
  string productId = 1;
}

message UpdateProductRequest {
  string productId = 1;
  string name = 2;
  float price = 3;
  string categoryId = 4;
}

message DeleteProductRequest {
  string productId = 1;
}

message ProductResponse {
  string productId = 1;
  string name = 2;
  float price = 3;
  string categoryId = 4;
}

message EmptyResponse {}

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (EmptyResponse);
}